# learn-dioxus

./: .gitignore  README.md
ch01-getting-started/: notes.md
ch01-getting-started/my_first_app/: Cargo.toml  Dioxus.toml
ch01-getting-started/my_first_app/assets/: main.css
ch01-getting-started/my_first_app/src/: main.rs
ch02-rsx/: notes.md
ch02-rsx/rsx_syntax/: Cargo.toml  Dioxus.toml
ch02-rsx/rsx_syntax/assets/: main.css
ch02-rsx/rsx_syntax/src/: main.rs
ch03-components/: notes.md
ch03-components/components/: Cargo.toml  Dioxus.toml
ch03-components/components/assets/: main.css
ch03-components/components/src/: main.rs
ch04-hooks/: notes.md
ch04-hooks/hooks/: Cargo.toml  Dioxus.toml
ch04-hooks/hooks/assets/: main.css
ch04-hooks/hooks/src/: main.rs
ch05-events/: notes.md
ch05-events/events/: Cargo.toml  Dioxus.toml
ch05-events/events/assets/: main.css
ch05-events/events/src/: main.rs
ch06-shared-state/: notes.md
ch06-shared-state/shared_state/: Cargo.toml  Dioxus.toml
ch07-router/: notes.md
ch07-router/router_demo/: Cargo.toml  Dioxus.toml
ch08-assets/: notes.md
ch08-assets/styling/: Cargo.toml  Dioxus.toml
ch09-platform/: notes.md
ch09-platform/platform_demo/: Cargo.toml  Dioxus.toml
ch09-platform/platform_demo/assets/: main.css
ch09-platform/platform_demo/src/: main.rs
ch10-markdown-editor/: notes.md
ch10-markdown-editor/markdown_editor/: Cargo.toml  Dioxus.toml
ch11-markdown-editor-2/: notes.md
ch11-markdown-editor-2/markdown_editor/: Cargo.toml  Dioxus.toml
ch12-deploy/: notes.md
(+9 files in other folders)
